--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.552.0",
+        "next-themes": "^0.4.6",
         "react-day-picker": "^9.11.1",
         "react-time-picker": "^8.0.2",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
     }
