--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.552.0",
         "next-themes": "^0.4.6",
         "react-day-picker": "^9.11.1",
