--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/node": "^22.18.13",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/recharts": "^1.8.29",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
@@ -50,6 +51,7 @@
         "next-themes": "^0.4.6",
         "react-day-picker": "^9.11.1",
         "react-time-picker": "^8.0.2",
+        "recharts": "^2.15.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
